# aiagentsuite

./: .gitignore  BOOTSTRAP.md  CODEBASE_REVIEW_SUMMARY.md  ContextGuard_Dependency_Map.md  Contributing to the .aiagentsuite Framework.md  Dependency_Map.md  Dockerfile  FRAMEWORK_INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  MASTER AI AGENT CONSTITUTION.md  Makefile  Principle 1_ The VDE Core Philosophy.md  Principle 2_ Branching and Commit Strategy.md  Principle 3_ YAGNI (You Ain't Gonna Need It).md  Project Context.md  README.md  TEST_COVERAGE_REPORT.md  aiagentsuite Dependency Map.md  bootstrap.py  docker-compose.yml  enterprise_dashboard.py  lsp-setup.py  modify my aiagentsuitebible. I want to ensure tha... (1).md  modify my aiagentsuitebible. I want to ensure tha....md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_core_functionality.py  verify_distribution.py
.github/workflows/: ci-cd.yml
benchmarks/: benchmark_suite.py
docs/: ARCHITECTURE.md  ENTERPRISE_DEPLOYMENT_GUIDE.md
docs/diagrams/: architecture_overview.md  class_inheritance.md  integration_flow.md  module_dependencies.md
infrastructure/: README.md
memory-bank/: decisionLog.md
protocols/: Protocol_ ContextGuard Testing Strategy.md
src/aiagentsuite/: __init__.py  interfaces.py
src/aiagentsuite/cli/: __init__.py  main.py
src/aiagentsuite/core/: __init__.py  architecture_analyzer.py  cache.py  chaos_engineering.py  config.py  errors.py  event_sourcing.py  formal_verification.py  observability.py  security.py  suite.py
src/aiagentsuite/dynamic/: __init__.py  learning_engine.py  protocol_adaptation.py
src/aiagentsuite/framework/: __init__.py  manager.py
src/aiagentsuite/intelligence/: __init__.py  adaptive_decision.py  feedback_loops.py  pattern_recognition.py  predictive_analytics.py
src/aiagentsuite/lsp/: __init__.py
src/aiagentsuite/mcp/: __init__.py
src/aiagentsuite/memory_bank/: __init__.py  manager.py
src/aiagentsuite/protocols/: __init__.py  executor.py
src/aiagentsuite/protocols/data/: Protocol_ ContextGuard Feature Development.md  Protocol_ ContextGuard Security Audit.md  (+3 more)
src/aiagentsuite/realtime/: __init__.py  event_bus.py  live_configuration.py  monitoring.py  streaming_context.py
src/aiagentsuite/tui/: app.py
tests/: test_chaos_engineering.py  test_cli.py  test_cli_simple.py  test_comprehensive.py  test_contracts.py  test_e2e_manual.py  test_formal_verification.py  test_framework_manager.py  test_lsp.py  test_mcp_server.py  test_memory_bank_real.py  test_protocol_executor.py
typescript/: .npmignore  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/src/lsp/: codeActions.ts  completions.ts  diagnostics.ts  index.ts  server.ts
typescript/src/mcp/: index.ts  server.ts  tools.ts
typescript/tests/: setup.ts
typescript/tests/lsp/: codeActions.test.ts  completions.test.ts  diagnostics.test.ts  server-simple.test.ts  server.test.ts
typescript/tests/mcp/: server-simple.test.ts  server.test.ts
