[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagentsuite"
version = "0.1.0"
description = "A comprehensive framework for AI-assisted development with Vibe-Driven Engineering"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # Core framework
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.41.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",

    # Observability & Monitoring
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "opentelemetry-distro>=0.44b0",
    "opentelemetry-instrumentation>=0.44b0",

    # Caching & Storage
    "aiocache>=0.12.0",
    "redis>=5.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",

    # Security & Authentication
    "cryptography>=41.0.7",
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Resiliency & Error Handling
    "backoff>=2.2.1",
    "aiofiles>=23.2.1",

    # HTTP & External Services
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # System monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "ptw>=0.10.0",  # pytest-watch
]
lsp = [
    "pygls>=1.0.0",
]
mcp = [
    "mcp-sdk>=0.1.0",  # Updated MCP SDK dependency
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.scripts]
aiagentsuite = "aiagentsuite.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aiagentsuite = ["*.md", "*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=aiagentsuite --cov-report=html --cov-report=term-missing"
